--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@types/node": "^14.14.22",
     "discord.js": "github:discordjs/discord.js",
     "jsonfile": "^6.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.3"
   }
 }
