--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/jaychu/emanbot#readme",
   "dependencies": {
     "@types/node": "^14.14.22",
+    "axios": "^1.1.3",
     "discord.js": "github:discordjs/discord.js",
-    "jsonfile": "^6.1.0"
+    "jsonfile": "^6.1.0",
+    "random": "^3.0.6"
   },
   "devDependencies": {
     "typescript": "^4.1.3"
